--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseurl = "http://localhost:1313/"
+baseurl = "www.blackrhinoo.com"
 title = "BLACK RHINO"
-theme = "hugo-creative-portfolio-theme"
+theme = "minimal-shop-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
