--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "www.blackrhinoo.com"
+baseurl = "https://www.blackrhinoo.com"
 title = "BLACK RHINO"
 theme = "minimal-shop-theme"
 languageCode = "en-us"
