--- a/config.toml
+++ b/config.toml
@@ -65,4 +65,4 @@ unsafe = true
   ## tiktok        = "https://www.tiktok.com/@lomauriii"
   instagram     = "https://www.instagram.com/lomaurii/"
   youtube       = "https://www.youtube.com/channel/UCEluw2wlBak9NJMzMWZZ8JQ"
-  coffe         = "https://streamelements.com/lomaurii/tip"
+  coffe         = "https://www.paypal.com/donate/?hosted_button_id=C7U5VHKVQL8BN"
