--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ unsafe = true
   # Nav links in the side bar
   [[params.navlinks]]
   name = "Tienda Online"
-  url = "colections/"
+  url = "colecciones/"
   home = true
   show = true
 
